Final commitments