@@ -9,20 +9,18 @@ import az.edu.ada.wm2.lab6.model.mapper.CategoryMapper;
 import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
+
     private final CategoryRepository categoryRepository;
     private final ProductRepository productRepository;
     private final ProductMapper productMapper;
 
-    @Autowired
     public CategoryServiceImpl(CategoryRepository categoryRepository,
                                ProductRepository productRepository,
                                ProductMapper productMapper) {
@@ -34,34 +32,43 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public CategoryResponseDto create(CategoryRequestDto dto) {
         Category category = CategoryMapper.toEntity(dto);
-        Category saved = categoryRepository.save(category);
-        return CategoryMapper.toResponseDto(saved);
+        Category savedCategory = categoryRepository.save(category);
+        return CategoryMapper.toResponseDto(savedCategory);
     }
 
     @Override
     public List<CategoryResponseDto> getAll() {
-        return categoryRepository.findAll().stream()
+        return categoryRepository.findAll()
+                .stream()
                 .map(CategoryMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CategoryResponseDto addProduct(UUID categoryId, UUID productId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found with id: " + categoryId));
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        category.getProducts().add(product);
         product.getCategories().add(category);
+
+        categoryRepository.save(category);
         productRepository.save(product);
+
         return CategoryMapper.toResponseDto(category);
     }
 
     @Override
     public List<ProductResponseDto> getProducts(UUID categoryId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found with id: " + categoryId));
-        return category.getProducts().stream()
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        return category.getProducts()
+                .stream()
                 .map(productMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
