@@ -7,22 +7,21 @@ import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
 import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
+
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
     private final ProductMapper productMapper;
 
-    @Autowired
     public ProductServiceImpl(ProductRepository productRepository,
                               CategoryRepository categoryRepository,
                               ProductMapper productMapper) {
@@ -31,72 +30,85 @@ public class ProductServiceImpl implements ProductService {
         this.productMapper = productMapper;
     }
 
-    private void validatePrice(BigDecimal price) {
-        if (price != null && price.compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Price must be greater than zero");
-        }
-    }
-
     @Override
-    public ProductResponseDto createProduct(ProductRequestDto dto) {
-        validatePrice(dto.getPrice());
-        Product product = productMapper.toEntity(dto);
-        if (dto.getCategoryIds() != null && !dto.getCategoryIds().isEmpty()) {
-            List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
-            product.setCategories(categories);
+    public ProductResponseDto createProduct(ProductRequestDto productDto) {
+        validatePrice(productDto.getPrice());
+
+        Product product = productMapper.toEntity(productDto);
+
+        List<Category> categories = new ArrayList<>();
+        if (productDto.getCategoryIds() != null) {
+            categories = categoryRepository.findAllById(productDto.getCategoryIds());
         }
-        Product saved = productRepository.save(product);
-        return productMapper.toResponseDto(saved);
+        product.setCategories(categories);
+
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toResponseDto(savedProduct);
     }
 
     @Override
     public ProductResponseDto getProductById(UUID id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
         return productMapper.toResponseDto(product);
     }
 
     @Override
     public List<ProductResponseDto> getAllProducts() {
-        return productRepository.findAll().stream()
+        return productRepository.findAll()
+                .stream()
                 .map(productMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public ProductResponseDto updateProduct(UUID id, ProductRequestDto dto) {
-        validatePrice(dto.getPrice());
-        Product existing = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
-        existing.setProductName(dto.getProductName());
-        existing.setPrice(dto.getPrice());
-        existing.setExpirationDate(dto.getExpirationDate());
-        if (dto.getCategoryIds() != null) {
-            List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
-            existing.setCategories(categories);
+    public ProductResponseDto updateProduct(UUID id, ProductRequestDto productDto) {
+        validatePrice(productDto.getPrice());
+
+        Product existingProduct = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        existingProduct.setProductName(productDto.getProductName());
+        existingProduct.setPrice(productDto.getPrice());
+        existingProduct.setExpirationDate(productDto.getExpirationDate());
+
+        List<Category> categories = new ArrayList<>();
+        if (productDto.getCategoryIds() != null) {
+            categories = categoryRepository.findAllById(productDto.getCategoryIds());
         }
-        Product saved = productRepository.save(existing);
-        return productMapper.toResponseDto(saved);
+        existingProduct.setCategories(categories);
+
+        Product updatedProduct = productRepository.save(existingProduct);
+        return productMapper.toResponseDto(updatedProduct);
     }
 
     @Override
     public void deleteProduct(UUID id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException("Product not found"));
         productRepository.delete(product);
     }
 
     @Override
     public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
-        return productRepository.findByExpirationDateBefore(date).stream()
+        return productRepository.findByExpirationDateBefore(date)
+                .stream()
                 .map(productMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
-        return productRepository.findByPriceBetween(minPrice, maxPrice).stream()
+        return productRepository.findByPriceBetween(minPrice, maxPrice)
+                .stream()
                 .map(productMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void validatePrice(BigDecimal price) {
+        if (price == null || price.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("Price must be greater than zero");
+        }
     }
 }
